@@ -50,7 +50,7 @@ function rv = mpver(varargin)
 v{1} = struct(  'Name',     'MATPOWER', ... 
                 'Version',  '4.1+', ...
                 'Release',  '', ...
-                'Date',     '28-Nov-2012' );
+                'Date',     '07-Jun-2013' );
 if nargout > 0
     if nargin > 0
         rv = v{1};
